logo à gauche et menu au centre

--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -10,9 +10,9 @@
 
     <div id="header_container">
         <header>
-        <a href="#">JustStreamIt</a><a/>
-        <a href="#">Accueil</a>
-        <a href="#">Catégories</a>
+        <span id="logo">JustStreamIt</span>
+        <span class="menu" id="accueil">Accueil</span>
+        <span class="menu" id="categorie">Catégories</span>
         </header>
     </div>
 
