mise en place du header

--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -8,19 +8,19 @@
 </head>
 <body>
 
-    <div id="header_container">
+
         <header>
         <span id="logo">JustStreamIt</span>
-        <span class="menu" id="accueil">Accueil</span>
-        <span class="menu" id="categorie">Catégories</span>
+        <span>Accueil</span>
+        <span>Catégories</span>
         </header>
-    </div>
+
 
     <div id="video accueil">
          <img src="../film.jpg">
     </div>
 
-    <div id="bandeau">
+    <div class="bandeau">
         <div class="film1"></div>
             <img src="../film.jpg">
         <div class="film2"></div>
@@ -38,7 +38,7 @@
 
     </div>
 
-     <div id="bandeau">
+     <div class="bandeau">
         <div class="film1"></div>
             <img src="../film.jpg">
         <div class="film2"></div>
@@ -56,7 +56,7 @@
 
     </div>
 
-    <div id="bandeau">
+    <div class="bandeau">
         <div class="film1"></div>
             <img src="../film.jpg">
         <div class="film2"></div>
