mise en place de la structure de la page

--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -8,71 +8,52 @@
 </head>
 <body>
 
+    <header>
+    <span id="logo">JustStreamIt</span>
+    <span class="menu">Accueil</span>
+    <span class="menu">Catégories</span>
+    </header>
 
-        <header>
-        <span id="logo">JustStreamIt</span>
-        <span>Accueil</span>
-        <span>Catégories</span>
-        </header>
+    <section>
+        <ul>
+            <li id="bandeau"><img src="../film.jpg"></li>
+            <li><h1> Films les mieux notés </h1></li>
+            <li><img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+            </li>
+            <li><h1> Catégorie 1 </h1></li>
+            <li><img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+            </li>
+           <li><h1> Catégorie 2 </h1></li>
+            <li><img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+            </li>
+            <li><h1> Catégorie 3 </h1></li>
+            <li><img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+                <img src="../film.jpg">
+            </li>
 
-
-    <div id="video accueil">
-         <img src="../film.jpg">
-    </div>
-
-    <div class="bandeau">
-        <div class="film1"></div>
-            <img src="../film.jpg">
-        <div class="film2"></div>
-            <img src="../film.jpg">
-        <div class="film3"></div>
-            <img src="../film.jpg">
-        <div class="film4"></div>
-            <img src="../film.jpg">
-        <div class="film5"></div>
-             <img src="../film.jpg">
-        <div class="film6"></div>
-            <img src="../film.jpg">
-        <div class="film7"></div>
-             <img src="../film.jpg">
-
-    </div>
-
-     <div class="bandeau">
-        <div class="film1"></div>
-            <img src="../film.jpg">
-        <div class="film2"></div>
-            <img src="../film.jpg">
-        <div class="film3"></div>
-            <img src="../film.jpg">
-        <div class="film4"></div>
-            <img src="../film.jpg">
-        <div class="film5"></div>
-             <img src="../film.jpg">
-        <div class="film6"></div>
-            <img src="../film.jpg">
-        <div class="film7"></div>
-             <img src="../film.jpg">
-
-    </div>
-
-    <div class="bandeau">
-        <div class="film1"></div>
-            <img src="../film.jpg">
-        <div class="film2"></div>
-            <img src="../film.jpg">
-        <div class="film3"></div>
-            <img src="../film.jpg">
-        <div class="film4"></div>
-            <img src="../film.jpg">
-        <div class="film5"></div>
-             <img src="../film.jpg">
-        <div class="film6"></div>
-            <img src="../film.jpg">
-        <div class="film7"></div>
-             <img src="../film.jpg">
-
-    </div>
-
+        </ul>
 </body>
 </html>
