mise en place de la structure css du site

--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -16,42 +16,47 @@
 
     <section>
         <ul>
-            <li id="bandeau"><img src="../film.jpg"></li>
+            <li>
+                <section id="bandeau"><p>Titre du film</p><img id="play_button" src="ressources/play_button.png/"><img id="img_bandeau" src="ressources/film.jpg/"></section></li>
             <li><h1> Films les mieux notés </h1></li>
-            <li><img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
+            <li><img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
             </li>
             <li><h1> Catégorie 1 </h1></li>
-            <li><img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
+            <li><img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
             </li>
            <li><h1> Catégorie 2 </h1></li>
-            <li><img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
+            <li><img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
             </li>
             <li><h1> Catégorie 3 </h1></li>
-            <li><img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
-                <img src="../film.jpg">
+            <li><img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
+                <img src="ressources/film.jpg/">
             </li>
 
         </ul>
