ajout des boutons et meilleure disposition des vignettes

--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -17,48 +17,71 @@
     <section>
         <ul>
             <li>
-                <section id="bandeau"><p>Titre du film</p><img id="play_button" src="ressources/play_button.png/"><img id="img_bandeau" src="ressources/film.jpg/"></section></li>
+                <section id="bandeau">
+                    <p>Titre du film</p>
+                    <input type="image" id="play_button" alt="play"
+       src="ressources/play_button.png">
+                    <img id="img_bandeau" src="ressources/film.jpg/">
+                </section></li>
             <li><h1> Films les mieux notés </h1></li>
-            <li><img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
+            <li>
+                <div class="carousel_1">
+
+                    <span>
+                        <span class="previous">
+                            <input type="image" class="previous" alt="previous"
+       src="ressources/precedent.png">
+                    </span>
+                          <img class="un" src="ressources/1.jpg/">
+                          <img class="deux" src="ressources/2.jpg/">
+                          <img class="trois" src="ressources/3.jpg/">
+                          <img class="quattre" src="ressources/4.jpg/">
+                        <span class="next">
+                             <input type="image" class="next" alt="next"
+       src="ressources/suivant.png">
+                    </span>
+                          <img class="cinq" src="ressources/5.jpg/">
+                          <img class="six" src="ressources/6.jpg/">
+                          <img class="sept" src="ressources/7.jpg/">
+                    </span>
+
+
+                </div>
             </li>
-            <li><h1> Catégorie 1 </h1></li>
-            <li><img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
+            <li>
+                <h1> Catégorie 1 </h1>
+            </li>
+            <li>
+                         <img class="un" src="ressources/1.jpg/">
+                          <img class="deux" src="ressources/2.jpg/">
+                          <img class="trois" src="ressources/3.jpg/">
+                          <img class="quattre" src="ressources/4.jpg/">
+                          <img class="cinq" src="ressources/5.jpg/">
+                          <img class="six" src="ressources/6.jpg/">
+                          <img class="sept" src="ressources/7.jpg/">
             </li>
            <li><h1> Catégorie 2 </h1></li>
-            <li><img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
+             <li>
+                          <img class="un" src="ressources/1.jpg/">
+                          <img class="deux" src="ressources/2.jpg/">
+                          <img class="trois" src="ressources/3.jpg/">
+                          <img class="quattre" src="ressources/4.jpg/">
+                          <img class="cinq" src="ressources/5.jpg/">
+                          <img class="six" src="ressources/6.jpg/">
+                          <img class="sept" src="ressources/7.jpg/">
             </li>
             <li><h1> Catégorie 3 </h1></li>
-            <li><img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
-                <img src="ressources/film.jpg/">
+            <li>
+                          <img class="un" src="ressources/1.jpg/">
+                          <img class="deux" src="ressources/2.jpg/">
+                          <img class="trois" src="ressources/3.jpg/">
+                          <img class="quattre" src="ressources/4.jpg/">
+                          <img class="cinq" src="ressources/5.jpg/">
+                          <img class="six" src="ressources/6.jpg/">
+                          <img class="sept" src="ressources/7.jpg/">
             </li>
 
         </ul>
+        <script src="P6_03_javascript.js"></script>
 </body>
 </html>
