bouton next 1ère grille fonctionne

--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -26,23 +26,22 @@
             <li><h1> Films les mieux notés </h1></li>
             <li>
                 <div class="carousel_1">
-
-                    <span>
                         <span class="previous">
                             <input type="image" class="previous" alt="previous"
        src="ressources/precedent.png">
                     </span>
-                          <img class="un" src="ressources/1.jpg/">
-                          <img class="deux" src="ressources/2.jpg/">
-                          <img class="trois" src="ressources/3.jpg/">
-                          <img class="quattre" src="ressources/4.jpg/">
-                        <span class="next">
+                    <span>
+                          <img class="display" src="ressources/1.jpg/">
+                          <img class="display" src="ressources/2.jpg/">
+                          <img class="display" src="ressources/3.jpg/">
+                          <img class="display" src="ressources/4.jpg/">
+                          <img class="hide" src="ressources/5.jpg/">
+                          <img class="hide" src="ressources/6.jpg/">
+                          <img class="hide" src="ressources/7.jpg/">
+                    </span>
+                        <span id="next1">
                              <input type="image" class="next" alt="next"
        src="ressources/suivant.png">
-                    </span>
-                          <img class="cinq" src="ressources/5.jpg/">
-                          <img class="six" src="ressources/6.jpg/">
-                          <img class="sept" src="ressources/7.jpg/">
                     </span>
 
 
@@ -52,33 +51,15 @@
                 <h1> Catégorie 1 </h1>
             </li>
             <li>
-                         <img class="un" src="ressources/1.jpg/">
-                          <img class="deux" src="ressources/2.jpg/">
-                          <img class="trois" src="ressources/3.jpg/">
-                          <img class="quattre" src="ressources/4.jpg/">
-                          <img class="cinq" src="ressources/5.jpg/">
-                          <img class="six" src="ressources/6.jpg/">
-                          <img class="sept" src="ressources/7.jpg/">
+
             </li>
            <li><h1> Catégorie 2 </h1></li>
              <li>
-                          <img class="un" src="ressources/1.jpg/">
-                          <img class="deux" src="ressources/2.jpg/">
-                          <img class="trois" src="ressources/3.jpg/">
-                          <img class="quattre" src="ressources/4.jpg/">
-                          <img class="cinq" src="ressources/5.jpg/">
-                          <img class="six" src="ressources/6.jpg/">
-                          <img class="sept" src="ressources/7.jpg/">
+
             </li>
             <li><h1> Catégorie 3 </h1></li>
             <li>
-                          <img class="un" src="ressources/1.jpg/">
-                          <img class="deux" src="ressources/2.jpg/">
-                          <img class="trois" src="ressources/3.jpg/">
-                          <img class="quattre" src="ressources/4.jpg/">
-                          <img class="cinq" src="ressources/5.jpg/">
-                          <img class="six" src="ressources/6.jpg/">
-                          <img class="sept" src="ressources/7.jpg/">
+
             </li>
 
         </ul>
