bouton previous 1ere grille fonctionne

--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -26,18 +26,18 @@
             <li><h1> Films les mieux notés </h1></li>
             <li>
                 <div class="carousel_1">
-                        <span class="previous">
+                        <span id="previous1">
                             <input type="image" class="previous" alt="previous"
        src="ressources/precedent.png">
                     </span>
                     <span>
-                          <img class="display" src="ressources/1.jpg/">
-                          <img class="display" src="ressources/2.jpg/">
-                          <img class="display" src="ressources/3.jpg/">
-                          <img class="display" src="ressources/4.jpg/">
-                          <img class="hide" src="ressources/5.jpg/">
-                          <img class="hide" src="ressources/6.jpg/">
-                          <img class="hide" src="ressources/7.jpg/">
+                          <img class="display1" src="ressources/1.jpg/">
+                          <img class="display1" src="ressources/2.jpg/">
+                          <img class="display1" src="ressources/3.jpg/">
+                          <img class="display1" src="ressources/4.jpg/">
+                          <img class="hide1" src="ressources/5.jpg/">
+                          <img class="hide1" src="ressources/6.jpg/">
+                          <img class="hide1" src="ressources/7.jpg/">
                     </span>
                         <span id="next1">
                              <input type="image" class="next" alt="next"
