ajout du titre du film bandeau

--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -18,7 +18,7 @@
         <ul>
             <li>
                 <section id="bandeau">
-                    <p>Titre du film</p>
+                    <p id="best_movie_title">Titre du film</p>
                     <input type="image" id="play_button" alt="play"
        src="ressources/play_button.png">
                     <img id="img_bandeau" src="ressources/film.jpg/">
