ajout des photos des films dans le 1er carousel et réécriture du carousel

--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -18,7 +18,7 @@
         <ul>
             <li>
                 <section id="bandeau">
-                    <p id="best_movie_title">Titre du film</p>
+                    <p id="bandeau_title">Titre du film</p>
                     <input type="image" id="play_button" alt="play"
        src="ressources/play_button.png">
                     <img id="img_bandeau" src="ressources/film.jpg/">
@@ -31,13 +31,13 @@
        src="ressources/precedent.png">
                     </span>
                     <span>
-                          <img class="display1" src="ressources/1.jpg/">
-                          <img class="display1" src="ressources/2.jpg/">
-                          <img class="display1" src="ressources/3.jpg/">
-                          <img class="display1" src="ressources/4.jpg/">
-                          <img class="hide1" src="ressources/5.jpg/">
-                          <img class="hide1" src="ressources/6.jpg/">
-                          <img class="hide1" src="ressources/7.jpg/">
+                          <img id="a1" class="img_movie" src="ressources/1.jpg/">
+                          <img id="a2" class="img_movie" src="ressources/2.jpg/">
+                          <img id="a3" class="img_movie" src="ressources/3.jpg/">
+                          <img id="a4" class="img_movie" src="ressources/4.jpg/">
+                          <img id="a5" class = "hide" class="img_movie" src="ressources/5.jpg/">
+                          <img id="a6" class="hide" class="img_movie" src="ressources/6.jpg/">
+                          <img id="a7" class="hide" class="img_movie" src="ressources/7.jpg/">
                     </span>
                         <span id="next1">
                              <input type="image" class="next" alt="next"
