--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -25,8 +25,8 @@
                 </section></li>
             <li><h1> Films les mieux notés </h1></li>
             <li>
-                <div class="carousel_1">
-                        <span id="previous1">
+                <div>
+                        <span id="previous_a">
                             <input type="image" class="previous" alt="previous"
        src="ressources/precedent.png">
                     </span>
@@ -39,7 +39,7 @@
                           <img id="a6" class="hide" class="img_movie" src="ressources/6.jpg/">
                           <img id="a7" class="hide" class="img_movie" src="ressources/7.jpg/">
                     </span>
-                        <span id="next1">
+                        <span id="next_a">
                              <input type="image" class="next" alt="next"
        src="ressources/suivant.png">
                     </span>
@@ -51,15 +51,75 @@
                 <h1> Catégorie 1 </h1>
             </li>
             <li>
+<div>
+                        <span id="previous_b">
+                            <input type="image" class="previous" alt="previous"
+       src="ressources/precedent.png">
+                    </span>
+                    <span>
+                          <img id="b1" class="img_movie" src="ressources/1.jpg/">
+                          <img id="b2" class="img_movie" src="ressources/2.jpg/">
+                          <img id="b3" class="img_movie" src="ressources/3.jpg/">
+                          <img id="b4" class="img_movie" src="ressources/4.jpg/">
+                          <img id="b5" class = "hide" class="img_movie" src="ressources/5.jpg/">
+                          <img id="b6" class="hide" class="img_movie" src="ressources/6.jpg/">
+                          <img id="b7" class="hide" class="img_movie" src="ressources/7.jpg/">
+                    </span>
+                        <span id="next_b">
+                             <input type="image" class="next" alt="next"
+       src="ressources/suivant.png">
+                    </span>
 
+
+                </div>
             </li>
            <li><h1> Catégorie 2 </h1></li>
              <li>
+<div>
+                        <span id="previous_c">
+                            <input type="image" class="previous" alt="previous"
+       src="ressources/precedent.png">
+                    </span>
+                    <span>
+                          <img id="c1" class="img_movie" src="ressources/1.jpg/">
+                          <img id="c2" class="img_movie" src="ressources/2.jpg/">
+                          <img id="c3" class="img_movie" src="ressources/3.jpg/">
+                          <img id="c4" class="img_movie" src="ressources/4.jpg/">
+                          <img id="c5" class = "hide" class="img_movie" src="ressources/5.jpg/">
+                          <img id="c6" class="hide" class="img_movie" src="ressources/6.jpg/">
+                          <img id="c7" class="hide" class="img_movie" src="ressources/7.jpg/">
+                    </span>
+                        <span id="next_c">
+                             <input type="image" class="next" alt="next"
+       src="ressources/suivant.png">
+                    </span>
 
+
+                </div>
             </li>
             <li><h1> Catégorie 3 </h1></li>
             <li>
+<div>
+                        <span id="previous_d">
+                            <input type="image" class="previous" alt="previous"
+       src="ressources/precedent.png">
+                    </span>
+                    <span>
+                          <img id="d1" class="img_movie" src="ressources/1.jpg/">
+                          <img id="d2" class="img_movie" src="ressources/2.jpg/">
+                          <img id="d3" class="img_movie" src="ressources/3.jpg/">
+                          <img id="d4" class="img_movie" src="ressources/4.jpg/">
+                          <img id="d5" class = "hide" class="img_movie" src="ressources/5.jpg/">
+                          <img id="d6" class="hide" class="img_movie" src="ressources/6.jpg/">
+                          <img id="d7" class="hide" class="img_movie" src="ressources/7.jpg/">
+                    </span>
+                        <span id="next_d">
+                             <input type="image" class="next" alt="next"
+       src="ressources/suivant.png">
+                    </span>
 
+
+                </div>
             </li>
 
         </ul>
