--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -17,26 +17,50 @@
                    src="ressources/play_button.png">
             <img id="img_banner" src="ressources/film.jpg/">
     </section>
-    <section class="modal">
-        <section class="modal_content">
-            <ul>
-                <li id="banner_modal">
-                    <p>test de la modale</p>
-                </li>
-            </ul>
+    <section id="banner_modal" class="modal">
+        <ul class="modal_content">
+            <li class="close">&times;
+            </li>
+            <li id="banner_modal_img">
+                L’image de la pochette du film
+            </li>
+            <li id="banner_modal_title">
+                Le Titre du film
+            </li>
+            <li id="banner_modal_category">
+                Le genre complet du film
+            </li>
+            <li id="banner_modal_date">
+               Sa date de sortie
+            </li>
+            <li id="banner_modal_rated">
+               Son Rated
+            </li>
+            <li id="banner_modal_imbd">
+               Son score Imdb
+            </li>
+            <li id="banner_modal_director">
+               Son réalisateur
+            </li>
+            <li id="banner_modal_actors">
+                La liste des acteurs
+            </li>
+            <li id="banner_modal_length">
+            Sa durée
+            </li>
+            <li id="banner_modal_country">
+            Le pays d’origine
+            </li>
+            <li id="banner_modal_box">
+            Le résultat au Box Office
+            </li>
+            <li id="banner_modal_summary">
+            Le résumé du film
+            </li>
+         </ul>
 
-    <span class="close">&times;</span>
-      <ul>
-          <li id="img_banner_modal">
-          </li>
-              <li id="title_banner_modal">
-          </li>
-      </ul>
-  </section>
-</li>
 </section>
-            <li><h1> Films les mieux notés </h1></li>
-            <li>
+            <h1> Films les mieux notés </h1>
                 <div>
                         <span id="previous_a">
                             <input type="image" class="previous" alt="previous"
@@ -47,20 +71,16 @@
                           <img id="a2" class="img_movie" src="ressources/2.jpg/">
                           <img id="a3" class="img_movie" src="ressources/3.jpg/">
                           <img id="a4" class="img_movie" src="ressources/4.jpg/">
-                          <img id="a5" class = "hide" class="img_movie" src="ressources/5.jpg/">
-                          <img id="a6" class="hide" class="img_movie" src="ressources/6.jpg/">
-                          <img id="a7" class="hide" class="img_movie" src="ressources/7.jpg/">
+                          <img id="a5" class ="hide" src="ressources/5.jpg/">
+                          <img id="a6" class="hide" src="ressources/6.jpg/">
+                          <img id="a7" class="hide" src="ressources/7.jpg/">
                     </span>
                         <span id="next_a">
                              <input type="image" class="next" alt="next"
        src="ressources/suivant.png">
                     </span>
                 </div>
-            </li>
-            <li>
                 <h1> Les meilleurs films d'action </h1>
-            </li>
-            <li>
 <div>
                         <span id="previous_b">
                             <input type="image" class="previous" alt="previous"
@@ -71,18 +91,16 @@
                           <img id="b2" class="img_movie" src="ressources/2.jpg/">
                           <img id="b3" class="img_movie" src="ressources/3.jpg/">
                           <img id="b4" class="img_movie" src="ressources/4.jpg/">
-                          <img id="b5" class="hide" class="img_movie" src="ressources/5.jpg/">
-                          <img id="b6" class="hide" class="img_movie" src="ressources/6.jpg/">
-                          <img id="b7" class="hide" class="img_movie" src="ressources/7.jpg/">
+                          <img id="b5" class="hide" src="ressources/5.jpg/">
+                          <img id="b6" class="hide" src="ressources/6.jpg/">
+                          <img id="b7" class="hide" src="ressources/7.jpg/">
                     </span>
                         <span id="next_b">
                              <input type="image" class="next" alt="next"
        src="ressources/suivant.png">
                     </span>
                 </div>
-            </li>
-           <li><h1> Les meilleurs films dramatiques </h1></li>
-             <li>
+           <h1> Les meilleurs films dramatiques </h1>
 <div>
                         <span id="previous_c">
                             <input type="image" class="previous" alt="previous"
@@ -93,18 +111,16 @@
                           <img id="c2" class="img_movie" src="ressources/2.jpg/">
                           <img id="c3" class="img_movie" src="ressources/3.jpg/">
                           <img id="c4" class="img_movie" src="ressources/4.jpg/">
-                          <img id="c5" class="hide" class="img_movie" src="ressources/5.jpg/">
-                          <img id="c6" class="hide" class="img_movie" src="ressources/6.jpg/">
-                          <img id="c7" class="hide" class="img_movie" src="ressources/7.jpg/">
+                          <img id="c5" class="hide" src="ressources/5.jpg/">
+                          <img id="c6" class="hide" src="ressources/6.jpg/">
+                          <img id="c7" class="hide" src="ressources/7.jpg/">
                     </span>
                         <span id="next_c">
                              <input type="image" class="next" alt="next"
        src="ressources/suivant.png">
                     </span>
                 </div>
-            </li>
-            <li><h1> Les meilleurs films à voir en famille </h1></li>
-            <li>
+            <h1> Les meilleurs films à voir en famille </h1>
 <div>
                         <span id="previous_d">
                             <input type="image" class="previous" alt="previous"
@@ -115,17 +131,15 @@
                           <img id="d2" class="img_movie" src="ressources/2.jpg/">
                           <img id="d3" class="img_movie" src="ressources/3.jpg/">
                           <img id="d4" class="img_movie" src="ressources/4.jpg/">
-                          <img id="d5" class="hide" class="img_movie" src="ressources/5.jpg/">
-                          <img id="d6" class="hide" class="img_movie" src="ressources/6.jpg/">
-                          <img id="d7" class="hide" class="img_movie" src="ressources/7.jpg/">
+                          <img id="d5" class="hide" src="ressources/5.jpg/">
+                          <img id="d6" class="hide" src="ressources/6.jpg/">
+                          <img id="d7" class="hide" src="ressources/7.jpg/">
                     </span>
                         <span id="next_d">
                              <input type="image" class="next" alt="next"
        src="ressources/suivant.png">
                     </span>
                 </div>
-            </li>
-        </ul>
         <script src="P6_03_javascript.js"></script>
 </body>
 </html>
