toutes les images ouvrent la même modal

--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -69,14 +69,13 @@
        src="ressources/precedent.png">
                     </span>
                     <span>
-                        <input type="image" id="a1" class="button" alt="a1"
-                   src="ressources/1.jpg/">
-                          <img id="a2" class="img_movie" class="button" src="ressources/2.jpg/">
-                          <img id="a3" class="img_movie" src="ressources/3.jpg/">
-                          <img id="a4" class="img_movie" src="ressources/4.jpg/">
-                          <img id="a5" class ="hide" src="ressources/5.jpg/">
-                          <img id="a6" class="hide" src="ressources/6.jpg/">
-                          <img id="a7" class="hide" src="ressources/7.jpg/">
+                          <img id="a1" class="img_movie button" src="ressources/1.jpg/">
+                          <img id="a2" class="img_movie button" src="ressources/2.jpg/">
+                          <img id="a3" class="img_movie button" src="ressources/3.jpg/">
+                          <img id="a4" class="img_movie button" src="ressources/4.jpg/">
+                          <img id="a5" class ="hide img_movie button" src="ressources/5.jpg/">
+                          <img id="a6" class="hide img_movie button" src="ressources/6.jpg/">
+                          <img id="a7" class="hide img_movie button" src="ressources/7.jpg/">
                     </span>
                         <span id="next_a">
                              <input type="image" class="next" alt="next"
@@ -90,13 +89,13 @@
        src="ressources/precedent.png">
                     </span>
                     <span>
-                          <img id="b1" class="img_movie" src="ressources/1.jpg/">
-                          <img id="b2" class="img_movie" src="ressources/2.jpg/">
-                          <img id="b3" class="img_movie" src="ressources/3.jpg/">
-                          <img id="b4" class="img_movie" src="ressources/4.jpg/">
-                          <img id="b5" class="hide" src="ressources/5.jpg/">
-                          <img id="b6" class="hide" src="ressources/6.jpg/">
-                          <img id="b7" class="hide" src="ressources/7.jpg/">
+                          <img id="b1" class="img_movie button" src="ressources/1.jpg/">
+                          <img id="b2" class="img_movie button" src="ressources/2.jpg/">
+                          <img id="b3" class="img_movie button" src="ressources/3.jpg/">
+                          <img id="b4" class="img_movie button" src="ressources/4.jpg/">
+                          <img id="b5" class="hide img_movie button" src="ressources/5.jpg/">
+                          <img id="b6" class="hide img_movie button" src="ressources/6.jpg/">
+                          <img id="b7" class="hide img_movie button" src="ressources/7.jpg/">
                     </span>
                         <span id="next_b">
                              <input type="image" class="next" alt="next"
@@ -110,13 +109,13 @@
        src="ressources/precedent.png">
                     </span>
                     <span>
-                          <img id="c1" class="img_movie" src="ressources/1.jpg/">
-                          <img id="c2" class="img_movie" src="ressources/2.jpg/">
-                          <img id="c3" class="img_movie" src="ressources/3.jpg/">
-                          <img id="c4" class="img_movie" src="ressources/4.jpg/">
-                          <img id="c5" class="hide" src="ressources/5.jpg/">
-                          <img id="c6" class="hide" src="ressources/6.jpg/">
-                          <img id="c7" class="hide" src="ressources/7.jpg/">
+                          <img id="c1" class="img_movie button" src="ressources/1.jpg/">
+                          <img id="c2" class="img_movie button" src="ressources/2.jpg/">
+                          <img id="c3" class="img_movie button" src="ressources/3.jpg/">
+                          <img id="c4" class="img_movie button" src="ressources/4.jpg/">
+                          <img id="c5" class="hide img_movie button" src="ressources/5.jpg/">
+                          <img id="c6" class="hide img_movie button" src="ressources/6.jpg/">
+                          <img id="c7" class="hide img_movie button" src="ressources/7.jpg/">
                     </span>
                         <span id="next_c">
                              <input type="image" class="next" alt="next"
@@ -130,13 +129,13 @@
        src="ressources/precedent.png">
                     </span>
                     <span>
-                          <img id="d1" class="img_movie" src="ressources/1.jpg/">
-                          <img id="d2" class="img_movie" src="ressources/2.jpg/">
-                          <img id="d3" class="img_movie" src="ressources/3.jpg/">
-                          <img id="d4" class="img_movie" src="ressources/4.jpg/">
-                          <img id="d5" class="hide" src="ressources/5.jpg/">
-                          <img id="d6" class="hide" src="ressources/6.jpg/">
-                          <img id="d7" class="hide" src="ressources/7.jpg/">
+                          <img id="d1" class="img_movie button" src="ressources/1.jpg/">
+                          <img id="d2" class="img_movie button" src="ressources/2.jpg/">
+                          <img id="d3" class="img_movie button" src="ressources/3.jpg/">
+                          <img id="d4" class="img_movie button" src="ressources/4.jpg/">
+                          <img id="d5" class="hide img_movie button" src="ressources/5.jpg/">
+                          <img id="d6" class="hide img_movie button" src="ressources/6.jpg/">
+                          <img id="d7" class="hide img_movie button" src="ressources/7.jpg/">
                     </span>
                         <span id="next_d">
                              <input type="image" class="next" alt="next"
