--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -12,10 +12,19 @@
     </header>
 <body>
     <section id="banner">
-        <p id="banner_title">Titre du film</p>
+            <ul>
+            <li>
+        <p id="banner_title"></p>
+            </li>
+            <li>
             <input type="image" id="play_button" class="button" alt="play"
                    src="ressources/play_button.png">
-            <img id="img_banner" src="ressources/film.jpg/">
+            </li>
+            <li>
+        <p id="banner_description"></p>
+            </li>
+        </ul>
+                <img id="img_banner" src="ressources/film.jpg/">
     </section>
     <section id="modal_container">
         <ul class="modal_content">
@@ -26,37 +35,26 @@
             <li> <img id="modal_img" class="modal_img">
             </li>
             <li id="modal_title">
-                Le Titre du film
             </li>
             <li id="modal_category">
-                Le genre complet du film
             </li>
             <li id="modal_date">
-               Sa date de sortie
             </li>
             <li id="modal_rated">
-               Son Rated
             </li>
             <li id="modal_imbd">
-               Son score Imdb
             </li>
             <li id="modal_director">
-               Son réalisateur
             </li>
             <li id="modal_actors">
-                La liste des acteurs
             </li>
             <li id="modal_length">
-            Sa durée
             </li>
             <li id="modal_country">
-            Le pays d’origine
             </li>
             <li id="modal_box">
-            Le résultat au Box Office
             </li>
             <li id="modal_summary">
-            Le résumé du film
             </li>
          </ul>
 
@@ -69,13 +67,13 @@
        src="ressources/precedent.png">
                     </span>
                     <span>
-                          <img id="a1" class="img_movie button" src="ressources/1.jpg/">
-                          <img id="a2" class="img_movie button" src="ressources/2.jpg/">
-                          <img id="a3" class="img_movie button" src="ressources/3.jpg/">
-                          <img id="a4" class="img_movie button" src="ressources/4.jpg/">
-                          <img id="a5" class ="hide img_movie button" src="ressources/5.jpg/">
-                          <img id="a6" class="hide img_movie button" src="ressources/6.jpg/">
-                          <img id="a7" class="hide img_movie button" src="ressources/7.jpg/">
+                          <img id="a1" class="img_movie button">
+                          <img id="a2" class="img_movie button">
+                          <img id="a3" class="img_movie button">
+                          <img id="a4" class="img_movie button">
+                          <img id="a5" class ="hide img_movie button">
+                          <img id="a6" class="hide img_movie button">
+                          <img id="a7" class="hide img_movie button">
                     </span>
                         <span id="next_a">
                              <input type="image" class="next" alt="next"
@@ -89,13 +87,13 @@
        src="ressources/precedent.png">
                     </span>
                     <span>
-                          <img id="b1" class="img_movie button" src="ressources/1.jpg/">
-                          <img id="b2" class="img_movie button" src="ressources/2.jpg/">
-                          <img id="b3" class="img_movie button" src="ressources/3.jpg/">
-                          <img id="b4" class="img_movie button" src="ressources/4.jpg/">
-                          <img id="b5" class="hide img_movie button" src="ressources/5.jpg/">
-                          <img id="b6" class="hide img_movie button" src="ressources/6.jpg/">
-                          <img id="b7" class="hide img_movie button" src="ressources/7.jpg/">
+                          <img id="b1" class="img_movie button">
+                          <img id="b2" class="img_movie button">
+                          <img id="b3" class="img_movie button">
+                          <img id="b4" class="img_movie button">
+                          <img id="b5" class="hide img_movie button">
+                          <img id="b6" class="hide img_movie button">
+                          <img id="b7" class="hide img_movie button">
                     </span>
                         <span id="next_b">
                              <input type="image" class="next" alt="next"
@@ -109,13 +107,13 @@
        src="ressources/precedent.png">
                     </span>
                     <span>
-                          <img id="c1" class="img_movie button" src="ressources/1.jpg/">
-                          <img id="c2" class="img_movie button" src="ressources/2.jpg/">
-                          <img id="c3" class="img_movie button" src="ressources/3.jpg/">
-                          <img id="c4" class="img_movie button" src="ressources/4.jpg/">
-                          <img id="c5" class="hide img_movie button" src="ressources/5.jpg/">
-                          <img id="c6" class="hide img_movie button" src="ressources/6.jpg/">
-                          <img id="c7" class="hide img_movie button" src="ressources/7.jpg/">
+                          <img id="c1" class="img_movie button">
+                          <img id="c2" class="img_movie button">
+                          <img id="c3" class="img_movie button">
+                          <img id="c4" class="img_movie button">
+                          <img id="c5" class="hide img_movie button">
+                          <img id="c6" class="hide img_movie button">
+                          <img id="c7" class="hide img_movie button">
                     </span>
                         <span id="next_c">
                              <input type="image" class="next" alt="next"
@@ -129,13 +127,13 @@
        src="ressources/precedent.png">
                     </span>
                     <span>
-                          <img id="d1" class="img_movie button" src="ressources/1.jpg/">
-                          <img id="d2" class="img_movie button" src="ressources/2.jpg/">
-                          <img id="d3" class="img_movie button" src="ressources/3.jpg/">
-                          <img id="d4" class="img_movie button" src="ressources/4.jpg/">
-                          <img id="d5" class="hide img_movie button" src="ressources/5.jpg/">
-                          <img id="d6" class="hide img_movie button" src="ressources/6.jpg/">
-                          <img id="d7" class="hide img_movie button" src="ressources/7.jpg/">
+                          <img id="d1" class="img_movie button">
+                          <img id="d2" class="img_movie button">
+                          <img id="d3" class="img_movie button">
+                          <img id="d4" class="img_movie button">
+                          <img id="d5" class="hide img_movie button">
+                          <img id="d6" class="hide img_movie button">
+                          <img id="d7" class="hide img_movie button">
                     </span>
                         <span id="next_d">
                              <input type="image" class="next" alt="next"
