--- a/P6_01_code_source.html
+++ b/P6_01_code_source.html
@@ -5,142 +5,122 @@
     <link rel="stylesheet" href="P6_02_style.css" />
     <title>Acueil JustStreamIt</title>
 </head>
-    <header>
-    <span id="logo">JustStreamIt</span>
-    <span class="menu">Accueil</span>
-    <span class="menu">Catégories</span>
-    </header>
 <body>
-    <section id="banner">
+    <div id="header">
+        <span id="logo">JustStreamIt</span>
+        <span class="menu">Accueil</span>
+        <span class="menu">Catégories</span>
+    </div>
+    <div id="banner">
             <ul>
-            <li>
-        <p id="banner_title"></p>
-            </li>
-            <li>
-            <input type="image" id="play_button" class="button" alt="play"
+                <li>
+                    <p id="banner_title"></p>
+                </li>
+                <li>
+                    <input type="image" id="play_button" class="button" alt="play"
                    src="ressources/play_button.png">
-            </li>
-            <li>
-        <p id="banner_description"></p>
-            </li>
-        </ul>
-                <img id="img_banner" src="ressources/film.jpg/">
-    </section>
-    <section id="modal_container">
+                </li>
+                <li>
+                    <p id="banner_description"></p>
+                </li>
+            </ul>
+        <img id="img_banner" src="ressources/film.jpg" alt="film">
+    </div>
+    <div id="modal_container">
         <ul class="modal_content">
             <li >
-                <span id="close">&times
-                </span>
+                <span id="close">&times;</span>
             </li>
-            <li> <img id="modal_img" class="modal_img">
+            <li>
+                <img id="modal_img" class="modal_img" src="ressources/film.jpg" alt="film">
             </li>
-            <li id="modal_title">
-            </li>
-            <li id="modal_category">
-            </li>
-            <li id="modal_date">
-            </li>
-            <li id="modal_rated">
-            </li>
-            <li id="modal_imbd">
-            </li>
-            <li id="modal_director">
-            </li>
-            <li id="modal_actors">
-            </li>
-            <li id="modal_length">
-            </li>
-            <li id="modal_country">
-            </li>
-            <li id="modal_box">
-            </li>
-            <li id="modal_summary">
-            </li>
+            <li id="modal_title"></li>
+            <li id="modal_category"></li>
+            <li id="modal_date"></li>
+            <li id="modal_rated"></li>
+            <li id="modal_imbd"></li>
+            <li id="modal_director"></li>
+            <li id="modal_actors"></li>
+            <li id="modal_length"></li>
+            <li id="modal_country"></li>
+            <li id="modal_box"></li>
+            <li id="modal_summary"></li>
          </ul>
 
-</section>
+</div>
+    <h1> Films les mieux notés </h1>
+    <div>
+        <span id="previous_a">
+                            <input type="image" class="previous" alt="previous" src="ressources/precedent.png">
+        </span>
+        <span>
+              <img id="a1" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="a2" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="a3" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="a4" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="a5" class ="hide img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="a6" class="hide img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="a7" class="hide img_movie button" src="ressources/film.jpg" alt="film">
+        </span>
+        <span id="next_a">
+            <input type="image" class="next" alt="next" src="ressources/suivant.png">
+        </span>
+    </div>
+        <h1> Les meilleurs films d'action </h1>
+    <div>
+        <span id="previous_b">
+            <input type="image" class="previous" alt="previous" src="ressources/precedent.png">
+        </span>
+        <span>
+              <img id="b1" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="b2" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="b3" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="b4" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="b5" class="hide img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="b6" class="hide img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="b7" class="hide img_movie button" src="ressources/film.jpg" alt="film">
+        </span>
+        <span id="next_b">
+            <input type="image" class="next" alt="next" src="ressources/suivant.png">
+        </span>
+    </div>
+    <h1> Les meilleurs films dramatiques </h1>
+    <div>
+        <span id="previous_c">
+            <input type="image" class="previous" alt="previous" src="ressources/precedent.png">
+        </span>
+        <span>
+              <img id="c1" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="c2" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="c3" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="c4" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="c5" class="hide img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="c6" class="hide img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="c7" class="hide img_movie button" src="ressources/film.jpg" alt="film">
+        </span>
+        <span id="next_c">
+            <input type="image" class="next" alt="next" src="ressources/suivant.png">
+        </span>
+    </div>
+    <h1> Les meilleurs films à voir en famille </h1>
+    <div>
+        <span id="previous_d">
+            <input type="image" class="previous" alt="previous" src="ressources/precedent.png">
+        </span>
+        <span>
+              <img id="d1" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="d2" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="d3" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="d4" class="img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="d5" class="hide img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="d6" class="hide img_movie button" src="ressources/film.jpg" alt="film">
+              <img id="d7" class="hide img_movie button" src="ressources/film.jpg" alt="film">
+        </span>
+        <span id="next_d">
+            <input type="image" class="next" alt="next" src="ressources/suivant.png">
+        </span>
 
-            <h1> Films les mieux notés </h1>
-                <div>
-                        <span id="previous_a">
-                            <input type="image" class="previous" alt="previous"
-       src="ressources/precedent.png">
-                    </span>
-                    <span>
-                          <img id="a1" class="img_movie button">
-                          <img id="a2" class="img_movie button">
-                          <img id="a3" class="img_movie button">
-                          <img id="a4" class="img_movie button">
-                          <img id="a5" class ="hide img_movie button">
-                          <img id="a6" class="hide img_movie button">
-                          <img id="a7" class="hide img_movie button">
-                    </span>
-                        <span id="next_a">
-                             <input type="image" class="next" alt="next"
-       src="ressources/suivant.png">
-                    </span>
-                </div>
-                <h1> Les meilleurs films d'action </h1>
-<div>
-                        <span id="previous_b">
-                            <input type="image" class="previous" alt="previous"
-       src="ressources/precedent.png">
-                    </span>
-                    <span>
-                          <img id="b1" class="img_movie button">
-                          <img id="b2" class="img_movie button">
-                          <img id="b3" class="img_movie button">
-                          <img id="b4" class="img_movie button">
-                          <img id="b5" class="hide img_movie button">
-                          <img id="b6" class="hide img_movie button">
-                          <img id="b7" class="hide img_movie button">
-                    </span>
-                        <span id="next_b">
-                             <input type="image" class="next" alt="next"
-       src="ressources/suivant.png">
-                    </span>
-                </div>
-           <h1> Les meilleurs films dramatiques </h1>
-<div>
-                        <span id="previous_c">
-                            <input type="image" class="previous" alt="previous"
-       src="ressources/precedent.png">
-                    </span>
-                    <span>
-                          <img id="c1" class="img_movie button">
-                          <img id="c2" class="img_movie button">
-                          <img id="c3" class="img_movie button">
-                          <img id="c4" class="img_movie button">
-                          <img id="c5" class="hide img_movie button">
-                          <img id="c6" class="hide img_movie button">
-                          <img id="c7" class="hide img_movie button">
-                    </span>
-                        <span id="next_c">
-                             <input type="image" class="next" alt="next"
-       src="ressources/suivant.png">
-                    </span>
-                </div>
-            <h1> Les meilleurs films à voir en famille </h1>
-<div>
-                        <span id="previous_d">
-                            <input type="image" class="previous" alt="previous"
-       src="ressources/precedent.png">
-                    </span>
-                    <span>
-                          <img id="d1" class="img_movie button">
-                          <img id="d2" class="img_movie button">
-                          <img id="d3" class="img_movie button">
-                          <img id="d4" class="img_movie button">
-                          <img id="d5" class="hide img_movie button">
-                          <img id="d6" class="hide img_movie button">
-                          <img id="d7" class="hide img_movie button">
-                    </span>
-                        <span id="next_d">
-                             <input type="image" class="next" alt="next"
-       src="ressources/suivant.png">
-                    </span>
-
-                </div>
+    </div>
         <script src="P6_03_javascript.js"></script>
 </body>
 </html>
